@@ -40,6 +40,7 @@ import java.awt.BorderLayout;
 import java.awt.Color;
 import java.awt.Component;
 import java.awt.Dimension;
+import java.awt.FlowLayout;
 import java.awt.Font;
 import java.awt.Point;
 import java.awt.Toolkit;
@@ -90,6 +91,7 @@ import megamek.client.ui.dialogs.randomArmy.MMLForceBuilderRandomArmyDialog;
 import megamek.client.ui.panels.phaseDisplay.lobby.LobbyErrors;
 import megamek.client.ui.panels.phaseDisplay.lobby.LobbyUtility;
 import megamek.client.ui.util.UIUtil;
+import megamek.common.battlefieldSupport.BattlefieldSupportAsset;
 import megamek.common.game.Game;
 import megamek.common.interfaces.IEntityRemovalConditions;
 import megamek.common.loaders.MekFileParser;
@@ -106,6 +108,7 @@ import megameklab.ui.dialog.MMLFileChooser;
 import megameklab.ui.dialog.MegaMekLabUnitSelectorDialog;
 import megameklab.ui.dialog.PrintQueueDialog;
 import megameklab.util.CConfig;
+import megameklab.util.MULManager;
 import megameklab.util.UnitUtil;
 import org.apache.commons.io.FilenameUtils;
 import org.apache.logging.log4j.util.Strings;
@@ -123,6 +126,13 @@ public class ForceBuildUI extends JFrame implements ListSelectionListener, Actio
     private DefaultTableModel tableModel;
     private JLabel totalBVLabel;
     private JScrollPane scrollPane;
+    /** The BFS checkmark column (hidden when the force has no assets). */
+    private TableColumn bfsColumn;
+    /** The BV column, whose header switches between "BV" and "BV/BSP". */
+    private TableColumn bvColumn;
+    /** Toggle shown only when assets are present: false = BV for all; true = BSP (in parens) for assets. */
+    private JToggleButton bvBspToggle;
+    private boolean showBspForAssets;
     private final JPopupMenu rowPopupMenu = new JPopupMenu();
 
     private MMLForceBuilderRandomArmyDialog randomArmyDialog;
@@ -131,10 +141,21 @@ public class ForceBuildUI extends JFrame implements ListSelectionListener, Actio
     private final Client client = UnitUtil.getDummyClient();
 
     private static final int COL_REMOVE = 0;
-    private static final int COL_NAME = 1;
-    private static final int COL_GUNNERY = 2;
-    private static final int COL_PILOTING = 3;
-    private static final int COL_BV = 4;
+    private static final int COL_BFS = 1;
+    private static final int COL_NAME = 2;
+    private static final int COL_GUNNERY = 3;
+    private static final int COL_PILOTING = 4;
+    private static final int COL_BV = 5;
+
+    /** Labels for the Regular/Veteran choice shown in the Gunnery column for Battlefield Support Asset rows. */
+    private static final String ASSET_REGULAR = Messages.getString("MekSelectorDialog.AssetSkill.Regular");
+    private static final String ASSET_VETERAN = Messages.getString("MekSelectorDialog.AssetSkill.Veteran");
+
+    /** Dark-yellow color used to distinguish Battlefield Support Asset names in the force list. */
+    private static final String ASSET_NAME_COLOR = "#E8C84A";
+    private static final Color ASSET_COLOR = Color.decode(ASSET_NAME_COLOR);
+    /** Checkmark shown in the BFS column for Battlefield Support Asset rows. */
+    private static final String BFS_CHECK = "\u2714";
 
     static final String LMP_C3DISCONNECT = "C3DISCONNECT";
     static final String LMP_C3CONNECT = "C3CONNECT";
@@ -391,11 +412,95 @@ public class ForceBuildUI extends JFrame implements ListSelectionListener, Actio
     }
 
     private void updateTotalBVLabelOnly() {
+        updateTotalLabel();
+    }
+
+    /**
+     * Updates the total label. In BV mode it shows the summed BV of the whole force (assets count as their BV). In
+     * BSP mode assets are excluded from the BV sum and their BSP is summed separately, e.g. "Total BV: 1200    BSP: 45".
+     */
+    private void updateTotalLabel() {
         int totalBV = 0;
+        int totalBSP = 0;
         for (Entity entity : forceList) {
-            totalBV += entity.calculateBattleValue();
+            if (showBspForAssets && (entity instanceof BattlefieldSupportAsset asset)) {
+                totalBSP += asset.getEffectiveBsp();
+            } else {
+                totalBV += entity.calculateBattleValue();
+            }
         }
-        totalBVLabel.setText("Total BV: " + totalBV);
+        totalBVLabel.setText(showBspForAssets
+              ? ("Total BV: " + totalBV + "    BSP: " + totalBSP)
+              : ("Total BV: " + totalBV));
+    }
+
+    /** @return the checkmark shown in the BFS column for asset rows, or an empty string for standard units. */
+    private static String bfsCell(Entity entity) {
+        return (entity instanceof BattlefieldSupportAsset) ? BFS_CHECK : "";
+    }
+
+    /** @return the Name-column HTML for the entity; asset names are shown in a dark-yellow colour. */
+    private static String nameCell(Entity entity) {
+        if (entity instanceof BattlefieldSupportAsset) {
+            return "<HTML><NOBR><FONT COLOR=\"" + ASSET_NAME_COLOR + "\">" + entity.getShortNameRaw()
+                  + "</FONT></NOBR></HTML>";
+        }
+        return UnitFormatter.getCell(entity);
+    }
+
+    /**
+     * Shows the BFS checkmark column and the BV/BSP toggle only when the force contains at least one asset, and forces
+     * BV mode when there are none. Called after every rebuild.
+     */
+    private void updateAssetColumns() {
+        boolean hasAssets = forceList.stream().anyMatch(e -> e instanceof BattlefieldSupportAsset);
+        setColumnVisible(bfsColumn, hasAssets);
+        if (bvBspToggle != null) {
+            bvBspToggle.setVisible(hasAssets);
+            if (!hasAssets && showBspForAssets) {
+                showBspForAssets = false;
+                bvBspToggle.setSelected(false);
+            }
+        }
+        updateBvColumnHeader();
+    }
+
+    private void updateBvColumnHeader() {
+        if (bvColumn != null) {
+            bvColumn.setHeaderValue(showBspForAssets ? "BV/BSP" : "BV");
+            if (entityTable.getTableHeader() != null) {
+                entityTable.getTableHeader().repaint();
+            }
+        }
+    }
+
+    /**
+     * Grows the window width just enough to hold the bottom controls when they no longer fit (e.g. after the BV/BSP
+     * toggle lengthens the total). Only ever widens - it never shrinks the window or changes the height, so it does not
+     * undo a manual resize.
+     */
+    private void ensureWidthForControls() {
+        revalidate();
+        int preferredWidth = getPreferredSize().width;
+        if (getWidth() < preferredWidth) {
+            setSize(preferredWidth, getHeight());
+        }
+    }
+
+    /** Collapses a fixed-width column to zero width when hidden, restoring a small width when shown. */
+    private static void setColumnVisible(TableColumn column, boolean visible) {
+        if (column == null) {
+            return;
+        }
+        if (visible) {
+            column.setMaxWidth(50);
+            column.setMinWidth(20);
+            column.setPreferredWidth(40);
+        } else {
+            column.setMinWidth(0);
+            column.setMaxWidth(0);
+            column.setPreferredWidth(0);
+        }
     }
 
     /**
@@ -408,8 +513,94 @@ public class ForceBuildUI extends JFrame implements ListSelectionListener, Actio
         }
     }
 
+    /** @return true if the force row at the given index holds a Battlefield Support Asset. */
+    private boolean isAssetRow(int row) {
+        return (row >= 0) && (row < forceList.size()) && (forceList.get(row) instanceof BattlefieldSupportAsset);
+    }
+
+    /**
+     * Renders a skill cell. Standard units show the numeric Gunnery/Piloting skill; Battlefield Support Asset rows
+     * show "Regular"/"Veteran" in the Gunnery cell and leave the Piloting cell blank (assets have no piloting skill).
+     */
+    private class SkillCellRenderer extends DefaultTableCellRenderer {
+        private final int columnKind;
+
+        SkillCellRenderer(int columnKind) {
+            this.columnKind = columnKind;
+            setHorizontalAlignment(SwingConstants.RIGHT);
+        }
+
+        @Override
+        public Component getTableCellRendererComponent(JTable table, Object value, boolean isSelected,
+              boolean hasFocus, int row, int column) {
+            Object display = value;
+            if (isAssetRow(row)) {
+                BattlefieldSupportAsset asset = (BattlefieldSupportAsset) forceList.get(row);
+                display = (columnKind == COL_GUNNERY) ? (asset.isVeteranCrew() ? ASSET_VETERAN : ASSET_REGULAR) : "";
+            }
+            return super.getTableCellRendererComponent(table, display, isSelected, hasFocus, row, column);
+        }
+    }
+
+    /**
+     * Cell editor for the Gunnery column: a 0-8 skill combo for standard units, or a Regular/Veteran combo for
+     * Battlefield Support Asset rows (Regular only when the asset has no Veteran variant). The same combo is reused
+     * with a per-row model so {@link DefaultCellEditor}'s commit-on-select behavior is preserved.
+     */
+    private class GunneryCellEditor extends DefaultCellEditor {
+        private final JComboBox<Object> combo;
+
+        @SuppressWarnings("unchecked")
+        GunneryCellEditor() {
+            super(new JComboBox<>());
+            combo = (JComboBox<Object>) getComponent();
+        }
+
+        @Override
+        public Component getTableCellEditorComponent(JTable table, Object value, boolean isSelected, int row,
+              int column) {
+            if (isAssetRow(row)) {
+                BattlefieldSupportAsset asset = (BattlefieldSupportAsset) forceList.get(row);
+                combo.setModel(new DefaultComboBoxModel<>(asset.hasVeteranProfile()
+                      ? new Object[] { ASSET_REGULAR, ASSET_VETERAN }
+                      : new Object[] { ASSET_REGULAR }));
+                value = asset.isVeteranCrew() ? ASSET_VETERAN : ASSET_REGULAR;
+            } else {
+                combo.setModel(new DefaultComboBoxModel<Object>(SKILL_LEVELS));
+            }
+            return super.getTableCellEditorComponent(table, value, isSelected, row, column);
+        }
+    }
+
+    /**
+     * Renders the BV column. Standard rows show the numeric BV; when the BV/BSP toggle is on, asset rows instead show
+     * their BSP cost in parentheses, e.g. "(17)".
+     */
+    private class BvCellRenderer extends DefaultTableCellRenderer {
+        BvCellRenderer() {
+            setHorizontalAlignment(SwingConstants.RIGHT);
+        }
+
+        @Override
+        public Component getTableCellRendererComponent(JTable table, Object value, boolean isSelected,
+              boolean hasFocus, int row, int column) {
+            Object display = value;
+            boolean bspCell = showBspForAssets && isAssetRow(row);
+            if (bspCell) {
+                BattlefieldSupportAsset asset = (BattlefieldSupportAsset) forceList.get(row);
+                display = "(" + asset.getEffectiveBsp() + ")";
+            }
+            Component comp = super.getTableCellRendererComponent(table, display, isSelected, hasFocus, row, column);
+            // Show the BSP cost in the asset yellow (BSP mode only); the super call restores the default colour for
+            // BV-mode and standard rows, and selection keeps its own foreground for legibility.
+            if (bspCell && !isSelected) {
+                comp.setForeground(ASSET_COLOR);
+            }
+            return comp;
+        }
+    }
+
     private void refreshTableContent() {
-        int totalBV = 0;
         for (int i = 0; i < forceList.size(); i++) {
             Entity entity = forceList.get(i);
             int bv = entity.calculateBattleValue();
@@ -420,16 +611,17 @@ public class ForceBuildUI extends JFrame implements ListSelectionListener, Actio
             if (gSkill >= 0) {
                 gunnery = gSkill;
             }
-            if (pSkill >= 0) {
+            if ((pSkill >= 0) && !(entity instanceof BattlefieldSupportAsset)) {
                 piloting = pSkill;
             }
-            tableModel.setValueAt(UnitFormatter.getCell(entity), i, COL_NAME);
+            tableModel.setValueAt(bfsCell(entity), i, COL_BFS);
+            tableModel.setValueAt(nameCell(entity), i, COL_NAME);
             tableModel.setValueAt(gunnery, i, COL_GUNNERY);
             tableModel.setValueAt(piloting, i, COL_PILOTING);
             tableModel.setValueAt(bv, i, COL_BV);
-            totalBV += bv;
         }
-        totalBVLabel.setText("Total BV: " + totalBV);
+        updateTotalLabel();
+        updateAssetColumns();
     }
 
     void rebuildTable() {
@@ -438,7 +630,6 @@ public class ForceBuildUI extends JFrame implements ListSelectionListener, Actio
         // Clear existing rows
         tableModel.setRowCount(0);
 
-        int totalBV = 0;
         for (Entity entity : forceList) {
             int bv = entity.calculateBattleValue();
             Integer gunnery = null;
@@ -449,16 +640,16 @@ public class ForceBuildUI extends JFrame implements ListSelectionListener, Actio
             if (gSkill >= 0) {
                 gunnery = gSkill;
             }
-            if (pSkill >= 0) {
+            if ((pSkill >= 0) && !(entity instanceof BattlefieldSupportAsset)) {
                 piloting = pSkill;
             }
 
             tableModel.addRow(new Object[] { UIManager.getIcon("InternalFrame.closeIcon"),
-                                             UnitFormatter.getCell(entity), gunnery, piloting, bv });
-            totalBV += bv;
+                                             bfsCell(entity), nameCell(entity), gunnery, piloting, bv });
         }
 
-        totalBVLabel.setText("Total BV: " + totalBV);
+        updateTotalLabel();
+        updateAssetColumns();
         if (selectedRow >= 0 && selectedRow < tableModel.getRowCount()) {
             entityTable.setRowSelectionInterval(selectedRow, selectedRow);
         }
@@ -491,18 +682,20 @@ public class ForceBuildUI extends JFrame implements ListSelectionListener, Actio
     private void populatePopupMenu(List<Entity> selectedEntities) {
         rowPopupMenu.removeAll();
 
+        Entity selectedEntity = selectedEntities.getFirst();
+
         // --- Open Editor ---
         JMenuItem viewItem = new JMenuItem(menuResources.getString("ForceBuildUI.popup.openEditor.text"));
         Font currentFont = viewItem.getFont();
         viewItem.setFont(currentFont.deriveFont(Font.BOLD));
         viewItem.setMnemonic(KeyEvent.VK_O);
-        viewItem.addActionListener(e -> openEntityInEditor(selectedEntities.get(0)));
+        viewItem.addActionListener(e -> openEntityInEditor(selectedEntity));
         rowPopupMenu.add(viewItem);
 
         // --- Edit Pilot/Equipment/Ammo ---
         JMenuItem editItem = new JMenuItem(menuResources.getString("ForceBuildUI.popup.editPilotEquip.text"));
         editItem.setMnemonic(KeyEvent.VK_E);
-        editItem.addActionListener(e -> openEntityConfiguration(selectedEntities.get(0)));
+        editItem.addActionListener(e -> openEntityConfiguration(selectedEntity));
         rowPopupMenu.add(editItem);
 
 
@@ -510,11 +703,10 @@ public class ForceBuildUI extends JFrame implements ListSelectionListener, Actio
         JMenuItem editDamage = new JMenuItem(menuResources.getString("ForceBuildUI.popup.editDamage.text"));
         editDamage.setMnemonic(KeyEvent.VK_D);
         editDamage.addActionListener(e -> {
-            Entity entity = selectedEntities.get(0);
-            UnitEditorDialog med = new UnitEditorDialog(null, entity);
+            UnitEditorDialog med = new UnitEditorDialog(null, selectedEntity);
             med.setVisible(true);
             med.dispose();
-            MegaMekLabTabbedUI.refreshEntity(entity);
+            MegaMekLabTabbedUI.refreshEntity(selectedEntity);
         });
         rowPopupMenu.add(editDamage);
 
@@ -526,7 +718,7 @@ public class ForceBuildUI extends JFrame implements ListSelectionListener, Actio
               "ForceBuildUI.popup.BVBreakdown.text"));
         miCurrentUnitBVBreakdown.setName("miCurrentUnitBVBreakdown");
         miCurrentUnitBVBreakdown.setMnemonic(KeyEvent.VK_U);
-        miCurrentUnitBVBreakdown.addActionListener(evt -> new BVDisplayDialog(null, selectedEntities.get(0)).setVisible(
+        miCurrentUnitBVBreakdown.addActionListener(evt -> new BVDisplayDialog(null, selectedEntity).setVisible(
               true));
         rowPopupMenu.add(miCurrentUnitBVBreakdown);
 
@@ -573,11 +765,18 @@ public class ForceBuildUI extends JFrame implements ListSelectionListener, Actio
         JPanel centerPanel = new JPanel(new BorderLayout(5, 5));
         centerPanel.setBorder(new EmptyBorder(10, 10, 10, 10));
 
-        String[] columnNames = { "", "Name", "Gunnery", "Piloting", "BV" };
+        String[] columnNames = { "", "BFS", "Name", "Gunnery", "Piloting", "BV" };
         tableModel = new DefaultTableModel(columnNames, 0) {
             @Override
             public boolean isCellEditable(int row, int column) {
-                return column == COL_REMOVE || column == COL_GUNNERY || column == COL_PILOTING;
+                if (column == COL_REMOVE || column == COL_GUNNERY) {
+                    return true;
+                }
+                if (column == COL_PILOTING) {
+                    // Assets have no piloting skill; their row shows only a Regular/Veteran choice in the Gunnery cell.
+                    return !isAssetRow(row);
+                }
+                return false;
             }
 
             @Override
@@ -600,8 +799,15 @@ public class ForceBuildUI extends JFrame implements ListSelectionListener, Actio
                     Entity entity = forceList.get(row);
                     boolean needsBvUpdate = false;
 
-                    // Only attempt cast if it's a skill column
-                    if (column == COL_GUNNERY || column == COL_PILOTING) {
+                    if (entity instanceof BattlefieldSupportAsset asset && column == COL_GUNNERY) {
+                        // Asset rows carry a Regular/Veteran choice (backed by the crew Gunnery skill) rather than a
+                        // 0-8 gunnery value; store the resulting gunnery so the cell stays an Integer.
+                        if (aValue instanceof String level) {
+                            asset.setVeteranCrew(ASSET_VETERAN.equals(level));
+                            needsBvUpdate = true;
+                        }
+                        super.setValueAt(asset.getCrew().getGunnery(), row, column);
+                    } else if (column == COL_GUNNERY || column == COL_PILOTING) {
                         if (aValue instanceof Integer skillValue) {
                             if (column == COL_GUNNERY) {
                                 entity.getCrew().setGunnery(skillValue, entity.getCrew().getCrewType().getGunnerPos());
@@ -610,8 +816,10 @@ public class ForceBuildUI extends JFrame implements ListSelectionListener, Actio
                             }
                             needsBvUpdate = true;
                         }
+                        super.setValueAt(aValue, row, column);
+                    } else {
+                        super.setValueAt(aValue, row, column);
                     }
-                    super.setValueAt(aValue, row, column);
 
                     if (needsBvUpdate) {
                         int newBv = entity.calculateBattleValue();
@@ -693,15 +901,21 @@ public class ForceBuildUI extends JFrame implements ListSelectionListener, Actio
         removeColumn.setCellRenderer(new ButtonRenderer());
         removeColumn.setCellEditor(new ButtonEditor(this));
 
+        // BFS Column - a dark-yellow checkmark marking asset rows; hidden (zero width) when the force has no assets.
+        bfsColumn = columnModel.getColumn(COL_BFS);
+        DefaultTableCellRenderer bfsRenderer = new DefaultTableCellRenderer();
+        bfsRenderer.setHorizontalAlignment(SwingConstants.CENTER);
+        bfsRenderer.setForeground(ASSET_COLOR);
+        bfsColumn.setCellRenderer(bfsRenderer);
+
         // Name Column
         TableColumn nameColumn = columnModel.getColumn(COL_NAME);
         nameColumn.setPreferredWidth(250);
         nameColumn.setMinWidth(200);
 
-        // Gunnery Column
+        // Gunnery Column - shows a 0-8 skill for normal units and a Regular/Veteran choice for asset rows.
         TableColumn gunneryColumn = columnModel.getColumn(COL_GUNNERY);
-        JComboBox<Integer> gunneryComboBox = new JComboBox<>(SKILL_LEVELS);
-        gunneryColumn.setCellEditor(new DefaultCellEditor(gunneryComboBox));
+        gunneryColumn.setCellEditor(new GunneryCellEditor());
         gunneryColumn.setPreferredWidth(70);
         gunneryColumn.setMinWidth(50);
 
@@ -712,17 +926,15 @@ public class ForceBuildUI extends JFrame implements ListSelectionListener, Actio
         pilotingColumn.setPreferredWidth(70);
         pilotingColumn.setMinWidth(50);
 
-        // BV Column
-        TableColumn bvColumn = columnModel.getColumn(COL_BV);
+        // BV Column - header switches to "BV/BSP" and asset rows show BSP in parentheses when the toggle is on.
+        bvColumn = columnModel.getColumn(COL_BV);
         bvColumn.setPreferredWidth(70);
         bvColumn.setMinWidth(50);
 
-        // Right-align values
-        DefaultTableCellRenderer rightRenderer = new DefaultTableCellRenderer();
-        rightRenderer.setHorizontalAlignment(SwingConstants.RIGHT);
-        bvColumn.setCellRenderer(rightRenderer);
-        gunneryColumn.setCellRenderer(rightRenderer);
-        pilotingColumn.setCellRenderer(rightRenderer);
+        // Asset rows render the Gunnery cell as Regular/Veteran and leave Piloting blank.
+        bvColumn.setCellRenderer(new BvCellRenderer());
+        gunneryColumn.setCellRenderer(new SkillCellRenderer(COL_GUNNERY));
+        pilotingColumn.setCellRenderer(new SkillCellRenderer(COL_PILOTING));
 
         scrollPane = new JScrollPane(entityTable);
         final Border originalOuterBorder = scrollPane.getBorder();
@@ -825,8 +1037,16 @@ public class ForceBuildUI extends JFrame implements ListSelectionListener, Actio
         mulExportButton.addActionListener(e -> exportAsMul());
         buttonPanel.add(mulExportButton, BorderLayout.WEST);
 
+        // Load MUL
+        Icon loadMulIcon = UIManager.getIcon("Tree.openIcon");
+        JButton loadMulButton = new JButton(loadMulIcon);
+        loadMulButton.setToolTipText(menuResources.getString("miLoadForceFromFile.text"));
+        loadMulButton.setFocusable(false);
+        loadMulButton.addActionListener(e -> loadForceFromFile());
+        buttonPanel.add(loadMulButton, BorderLayout.WEST);
+
         // Load from Cache
-        Icon openIcon = UIManager.getIcon("Tree.openIcon");
+        Icon openIcon = UIManager.getIcon("FileChooser.detailsViewIcon");
         JButton loadFromCacheButton = new JButton(openIcon);
         loadFromCacheButton.setToolTipText(dialogResources.getString("ForceBuildDialog.loadFromCache.toolTipText"));
         loadFromCacheButton.setFocusable(false);
@@ -863,10 +1083,26 @@ public class ForceBuildUI extends JFrame implements ListSelectionListener, Actio
 
         bottomPanel.add(buttonPanel, BorderLayout.WEST);
 
+        // BV/BSP toggle (shown only when the force has assets) plus the running total, right-aligned.
+        bvBspToggle = new JToggleButton(Messages.getString("MekSelectorDialog.ToggleAssetCost"));
+        bvBspToggle.setToolTipText(Messages.getString("MekSelectorDialog.ToggleAssetCost.ToolTip"));
+        bvBspToggle.setVisible(false);
+        bvBspToggle.addActionListener(e -> {
+            showBspForAssets = bvBspToggle.isSelected();
+            updateBvColumnHeader();
+            updateTotalLabel();
+            entityTable.repaint();
+            ensureWidthForControls();
+        });
+
         // Total BV Label
         totalBVLabel = new JLabel("Total BV: 0", SwingConstants.RIGHT);
         totalBVLabel.setBorder(new EmptyBorder(0, 0, 0, 10));
-        bottomPanel.add(totalBVLabel, BorderLayout.EAST);
+
+        JPanel totalPanel = new JPanel(new FlowLayout(FlowLayout.RIGHT, 10, 0));
+        totalPanel.add(bvBspToggle);
+        totalPanel.add(totalBVLabel);
+        bottomPanel.add(totalPanel, BorderLayout.EAST);
 
         centerPanel.add(bottomPanel, BorderLayout.SOUTH);
 
@@ -919,12 +1155,41 @@ public class ForceBuildUI extends JFrame implements ListSelectionListener, Actio
         rebuildTable();
     }
 
+    /**
+     * Applies the unit selector's current Skills settings to freshly selected entities before they are added to the
+     * force: Gunnery/Piloting for standard units, or the Regular/Veteran choice for Battlefield Support Assets. This is
+     * force-builder-only behavior (the print queue deliberately does not carry skills).
+     */
+    private void applySelectorSkills(MegaMekLabUnitSelectorDialog dialog, List<Entity> entities) {
+        if (entities == null) {
+            return;
+        }
+        int gunnery = dialog.getSelectedGunnery();
+        int piloting = dialog.getSelectedPiloting();
+        boolean veteran = dialog.isVeteranAssetSkillSelected();
+        for (Entity entity : entities) {
+            if (entity == null) {
+                continue;
+            }
+            if (entity.getCrew() == null) {
+                entity.setCrew(new Crew(entity.defaultCrewType()));
+            }
+            if (entity instanceof BattlefieldSupportAsset asset) {
+                asset.setVeteranCrew(veteran);
+            } else {
+                entity.getCrew().setGunnery(gunnery, entity.getCrew().getCrewType().getGunnerPos());
+                entity.getCrew().setPiloting(piloting, entity.getCrew().getCrewType().getPilotPos());
+            }
+        }
+    }
+
     public void selectAndLoadUnitFromCache() {
         UnitLoadingDialog unitLoadingDialog = new UnitLoadingDialog(null);
         unitLoadingDialog.setVisible(true);
         MegaMekLabUnitSelectorDialog viewer = new MegaMekLabUnitSelectorDialog(null, unitLoadingDialog, dialog -> {
             List<Entity> selectedEntities = dialog.getChosenEntities();
             warnOnInvalid(selectedEntities);
+            applySelectorSkills(dialog, selectedEntities);
             addEntities(selectedEntities);
         });
         try {
@@ -959,6 +1224,23 @@ public class ForceBuildUI extends JFrame implements ListSelectionListener, Actio
             return;
         }
         addEntity(loadedUnit);
+    }
+
+    public void loadForceFromFile() {
+        loadForceFromFile(this);
+    }
+
+    public static void loadForceFromFile(JFrame owner) {
+        MMLFileChooser loadMulFileChooser = new MMLFileChooser();
+        loadMulFileChooser.setDialogTitle(Messages.getString("ClientGUI.openUnitListFileDialog.title"));
+        loadMulFileChooser.setFileFilter(new FileNameExtensionFilter(Messages.getString("ClientGUI.descriptionMULFiles"),
+              CG_FILEPATH_MUL));
+        loadMulFileChooser.setCurrentDirectory(new File(CConfig.getParam(CConfig.FILE_LAST_DIRECTORY)));
+        int result = loadMulFileChooser.showOpenDialog(owner);
+        if ((result != JFileChooser.APPROVE_OPTION) || (loadMulFileChooser.getSelectedFile() == null)) {
+            return;
+        }
+        MULManager.loadForceFromMUL(loadMulFileChooser.getSelectedFile());
     }
 
     private void warnOnInvalid(List<Entity> entity) {
@@ -1126,7 +1408,7 @@ public class ForceBuildUI extends JFrame implements ListSelectionListener, Actio
         fileChooser.setFileFilter(filter);
         fileChooser.setSelectedFile(new File(Strings.isNotBlank(mulFileName) ?
               mulFileName :
-              forceList.get(0).getShortName() + " etc." + CG_FILEPATH_MUL));
+              forceList.getFirst().getShortName() + " etc." + CG_FILEPATH_MUL));
 
         if (!(fileChooser.showSaveDialog(null) == JFileChooser.APPROVE_OPTION) ||
               fileChooser.getSelectedFile() == null) {
