@@ -66,6 +66,7 @@ import megamek.common.Configuration;
 import megamek.common.Player;
 import megamek.common.battleArmor.BattleArmor;
 import megamek.common.game.Game;
+import megamek.common.battlefieldSupport.BattlefieldSupportAsset;
 import megamek.common.loaders.MekFileParser;
 import megamek.common.units.Aero;
 import megamek.common.units.BTObject;
@@ -297,6 +298,9 @@ public class PrintQueueDialog extends AbstractMMLButtonDialog {
     private void refresh() {
         List<String> nameList = units.stream().map(unit -> {
             String title = String.format(" %s %s", unit.generalName(), unit.specificName());
+            if (unit instanceof BattlefieldSupportAsset) {
+                title += " " + resources.getString("PrintQueueDialog.assetTag");
+            }
             if (fromMul && unit instanceof Entity) {
                 var crew = ((Entity) unit).getCrew();
                 if (!crew.getName().startsWith(RandomNameGenerator.UNNAMED)) {
@@ -382,7 +386,7 @@ public class PrintQueueDialog extends AbstractMMLButtonDialog {
 
         // If the first entity has no game, we link them all to a game. This is needed for C3 links.
         boolean forcedLink = false;
-        if (entities.get(0).getGame() == null) {
+        if (entities.getFirst().getGame() == null) {
             forcedLink = true;
             linkForce();
         }
@@ -394,7 +398,7 @@ public class PrintQueueDialog extends AbstractMMLButtonDialog {
             fileChooser.setFileFilter(filter);
             fileChooser.setSelectedFile(new File(Strings.isNotBlank(mulFileName) ?
                   mulFileName :
-                  entities.get(0).getShortName() + " etc." + CG_FILEPATH_MUL));
+                  entities.getFirst().getShortName() + " etc." + CG_FILEPATH_MUL));
 
             if (!(fileChooser.showSaveDialog(parent) == JFileChooser.APPROVE_OPTION) ||
                   fileChooser.getSelectedFile() == null) {
@@ -520,8 +524,8 @@ public class PrintQueueDialog extends AbstractMMLButtonDialog {
 
         for (var list : List.of(ba, ci, cv, mek, proto, aero, others)) {
             list.sort(Comparator.comparing(Entity::isClan).reversed()
-                        .thenComparingDouble(Entity::getWeight)
-                        .thenComparing(UnitUtil::getPrintName));
+                  .thenComparingDouble(Entity::getWeight)
+                  .thenComparing(UnitUtil::getPrintName));
         }
 
         units.clear();
